# selfProjects

./: .gitmodules
GeneratePDFsFromXML/: .gitignore  Dockerfile  RoadMap.excalidraw  docker-compose.yaml
GeneratePDFsFromXML/src/: CMakeLists.txt  cross-compilation.cmake  readme.md
GeneratePDFsFromXML/src/parseXmlExe/: CMakeLists.txt  main.cpp
GeneratePDFsFromXML/src/parseXmlLib/: CMakeLists.txt  parseXmlLib.cpp  parseXmlLib.h
GeneratePDFsFromXML/src/parseXmlLibTests/: CMakeLists.txt  parseXmlLibTests.cpp
